# KVzip

./: .gitignore  README.md  args.py  demo.py  eval.py  pyproject.toml  requirements.txt  test.py
attention/: attn.py  kvcache.py  score.py
csrc/: build.py
data/: harry_potter4.txt  load.py  wrapper.py
data/needle/: data.py
model/: load.py  monkeypatch.py  template.py  wrapper.py
model/quant_model/: README.md  int4_kv.py  monkeypatch.py
results/: metric.py  parse.py
utils/: func.py
